Check journey times between site / areas
Having "Full day" checked by default in absences is configurable
Check journey times between absences and jobs
Enable web profiler on dev environment

-Fixes
Use fine tuning of hours in absence forms
Fix the control of plannings when an absence is recorded
Fix removal of reccuring absences
Set default value for start and end hours when saving an absence

*** Version 20.04.00       (2020-06-15)   ***
- Enhancements
Include symfony framework
Move absences pages into a symfony controller
Move absences/info pages into a symfony controller
Move admin/info pages into a symfony controller
Move agents pages into a symfony controller
Move configuration page into a symfony controller
Move help page into a symfony controller
Move holidays pages into a symfony controller
Ability to check permissions on symfony kernel.request event
Add unit tests
Ability to request holiday in days (optionnal)
Ability to request holiday on half day
Add a second notifications workflow on absences
Ability to add documents on absences
Ability to change user password by typing a new one into a form
Add free breaktimes on working hours
Hamac import : Add intermediate validation and information logging
Shows Agendas/Synchro tab on agent's pages when Hamac-csv param is set
Disallow changing passwords in demo mode
Allow selection of days in other months on datepickers
Add a script to launch setup from CLI (for a new installation: run install.sh)
Update PHPMailer from 6.0.5 to 6.1.6

-Fixes
Add raw filter on agent templates for fields services, right and skills
Fix undefined indexes on statistiques/service.php & statut.php
Fix checking email settings on configuration page
Fix the wrong red marking in the diaries
Fix wrong SR (without meal) marking on gray cells
Fix the creation of status and service CSS classes in the planning.js file
Rename recup_samedi to comp_time
Fix a warning when a day planning is empty
Correct use of PresentSet class in planning/poste/index