@@ -13,6 +13,7 @@ Use fine tuning of hours in absence forms
 Fix the control of plannings when an absence is recorded
 Fix removal of reccuring absences
 Set default value for start and end hours when saving an absence
+Fix admin info and absences info forms
 
 *** Version 20.04.00       (2020-06-15)   ***
 - Enhancements
